fix border color and font size for share buttons on full bleed templates
for [RT-408](https://jira.wnyc.org/browse/RT-408)

--- a/app/styles/_story.scss
+++ b/app/styles/_story.scss
@@ -76,6 +76,8 @@
 
   .btn {
     color: white;
+    border-color: rgba(white, 0.6);
+    font-size: 12px;
   }
 }
 
